@@ -61,7 +61,8 @@ the `new_callable` argument to `patch`.
       this case the exception will be raised when the mock is called.
 
       If `side_effect` is an iterable then each call to the mock will return
-      the next value from the iterable.
+      the next value from the iterable. If any of the members of the iterable
+      are exceptions they will be raised instead of returned.
 
       A `side_effect` can be cleared by setting it to `None`.
 
@@ -727,6 +728,22 @@ a `StopIteration` is raised):
         Traceback (most recent call last):
           ...
         StopIteration
+
+If any members of the iterable are exceptions they will be raised instead of
+returned:
+
+.. doctest::
+
+        >>> iterable = (33, ValueError, 66)
+        >>> m = MagicMock(side_effect=iterable)
+        >>> m()
+        33
+        >>> m()
+        Traceback (most recent call last):
+         ...
+        ValueError
+        >>> m()
+        66
 
 
 .. _deleting-attributes:
