@@ -11,6 +11,8 @@ CHANGELOG
 * `PropertyMock` attributes are now standard `MagicMocks`
 * `create_autospec` works with attributes present in results of `dir` that
   can't be fetched from the object's class. Contributed by Konstantine Rybnikov
+* Any exceptions in an iterable `side_effect` will be raised instead of
+  returned
 
 
 2012/03/25 Version 1.0.0 alpha 1
